# openfang

./: -w  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  MIGRATION.md  README.md  docker-compose.yml  openfang.toml  openfang.toml.example
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
crates/openfang-agency-import/: Cargo.toml
crates/openfang-agency-import/src/: lib.rs  mapper.rs  markdown_sections.rs  normalize.rs  parser.rs
crates/openfang-api/: Cargo.toml
crates/openfang-api/src/: api_response.rs  auth.rs  channel_bridge.rs  command_center.rs  lib.rs  middleware.rs  rate_limiter.rs  request_context.rs  routes.rs  security.rs  server.rs  webchat.rs  ws.rs
crates/openfang-api/static/: index_body.html  index_head.html
crates/openfang-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs
crates/openfang-channels/src/: bridge.rs  matrix.rs  slack.rs  telegram.rs  types.rs
crates/openfang-cli/src/: main.rs  templates.rs
crates/openfang-orchestrator/: Cargo.toml
crates/openfang-orchestrator/src/: definition.rs  engine.rs  errors.rs  event.rs  executor.rs  lib.rs  nodes.rs  run.rs  store.rs  types.rs
crates/openfang-orchestrator/tests/: sequential_approval.rs  support_triage.rs
crates/openfang-runtime/src/: lib.rs  (+8 more)
docs/: README.md  agent-templates.md  api-reference.md  channel-adapters.md  cli-reference.md  getting-started.md  integration-contract.md  local-inference-tier.md  personal-chief-of-staff-v1.md  production-checklist.md  superpowers-native-mapping.md  troubleshooting.md  workflows.md
(+105 files in other folders)
