[package]
name = "openfang-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Thin sequential workflow orchestration for OpenFang"

[dependencies]
openfang-types = { path = "../openfang-types" }
openfang-kernel = { path = "../openfang-kernel" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
